@@ -72,7 +72,8 @@
 #
 # Tell upsd to look for the driver state sockets in 'path' rather
 # than the default that was compiled into the program.
-# Note that the drivers must use the same path.
+# Note that the drivers must use the same path, so `upsd` would prefer the
+# same-named setting from `ups.conf` global section, if present, over its own.
 # Environment variable NUT_STATEPATH set by caller can override this setting.
 
 # =======================================================================
